# cpp_nodes

./: .gitignore  CMakeLists.txt
.githhub/workflows/: build.yaml
.github/workflows/: build.yaml
src/: main.cpp
src/lib/: lib.cpp  lib.hpp  nodes.cpp  nodes.hpp
test/: test.cpp  test.hpp
test/lib/: lib.cpp
